@@ -1,6 +1,6 @@
 {
     "extDescription": {
-        "message": "Custom Google™ Menu ayuda a organizar los enlaces a los servicios de Google™ en la página de Gmail™. Los enlaces se representan en la extensión como cajas, y su nuevo diseño se crea arrastrando y soltando las cajas.",
+        "message": "Custom Google™ Menu ayuda a organizar los enlaces a los servicios de Google en cualquier página de Google. Los enlaces se representan en la extensión como cajas, y su nuevo diseño se crea arrastrando y soltando las cajas.",
         "description": "Extension description."
     }
 }
