@@ -3,7 +3,7 @@
     <name short="CGM" xml:lang="en">CGM: Custom Google™ Menu</name>
     <description xml:lang="ru">Custom Google™ Menu позволяет вам изменить структуру навигационной панели на страницах сервисов Гугла. Ссылки представляются в виде прямоугольников, и новая структура задается перетаскиванием этих прямоугольников с помощью мышки.</description>
     <description xml:lang="en">Custom Google™ Menu allows you to rearrange links to Google services on any Google page. Links are represented as boxes and the new layout is created by dragging and dropping these boxes.</description>
-    <description xml:lang="es">Custom Google™ Menu ayuda a organizar los enlaces a los servicios de Google en la página de Gmail. Los enlaces se representan en la extensión como cajas, y su nuevo diseño se crea arrastrando y soltando las cajas.</description>
+    <description xml:lang="es">Custom Google™ Menu ayuda a organizar los enlaces a los servicios de Google en cualquier página de Google. Los enlaces se representan en la extensión como cajas, y su nuevo diseño se crea arrastrando y soltando las cajas.</description>
     
     <description xml:lang="de">Custom Google™ Menu hilft Ihnen Ihre Links für die Google Dienstleistungen auf den Google Seiten zu organisieren. Jeder Link wird als ein Kästchen dargestellt und so ordnet man diese Kästchen einfach per Drag-and-Drop an.</description>
     <author href="https://github.com/fralik">Vadim Frolov</author>
