@@ -63,9 +63,12 @@ $(document).ready(function() {
         origin = opera.extension.bgProcess.getUrl();
     }
 
+    // <-- google analytics code
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = 'https://ssl.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    // --> google analytics code
+    
     // <-- flattr code
     var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
     s.type = 'text/javascript';
