@@ -54,7 +54,7 @@
     </script></div>
     <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
     <!-- /Yandex.Metrika counter -->
-
+    
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/options.js" type="text/javascript"></script>
 </body>
