@@ -1,6 +1,8 @@
 v 1.1
   * Opera: added option to show/hide popup button on the toolbar.
   * Works on any Google page, not only Gmail.
+  * Added Flattr donation button.
+  - Does not work on Google Apps for Business.
   
 v 1.0 13.10.2011
   * Initial release.
